--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="post">
             <div class="filterTab">
                 <div class="filter">
-                    <div class="filterName">Durchmesser</div>
+                    <div class="filterName">Ø</div>
                     <select id="dropdownDiameter" class="droppy">
                         <option value="option1">Alle</option>
                     </select>
